--- a/reference.bib
+++ b/reference.bib
@@ -128,3 +128,74 @@
     year = {2013},
   pages = {2666--2673}
 }
+
+@article{manjunath1996texture,
+  title={Texture features for browsing and retrieval of image data},
+  author={Manjunath, Bangalore S and Ma, Wei-Ying},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={18},
+  number={8},
+  pages={837--842},
+  year={1996},
+  publisher={IEEE}
+}
+
+@inproceedings{zhou2008sift,
+  title={Sift-bag kernel for video event analysis},
+  author={Zhou, Xi and Zhuang, Xiaodan and Yan, Shuicheng and Chang, Shih-Fu and Hasegawa-Johnson, Mark and Huang, Thomas S},
+  booktitle={Proceedings of the 16th ACM international conference on Multimedia},
+  pages={229--238},
+  year={2008},
+  organization={ACM}
+}
+
+@article{lindeberg1998feature,
+  title={Feature detection with automatic scale selection},
+  author={Lindeberg, Tony},
+  journal={International journal of computer vision},
+  volume={30},
+  number={2},
+  pages={79--116},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{mikolajczyk2004scale,
+  title={Scale \& affine invariant interest point detectors},
+  author={Mikolajczyk, Krystian and Schmid, Cordelia},
+  journal={International journal of computer vision},
+  volume={60},
+  number={1},
+  pages={63--86},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{lowe2004distinctive,
+  title={Distinctive image features from scale-invariant keypoints},
+  author={Lowe, David G},
+  journal={International journal of computer vision},
+  volume={60},
+  number={2},
+  pages={91--110},
+  year={2004},
+  publisher={Springer}
+}
+
+@book{solem2012programming,
+  title={Programming Computer Vision with Python: Tools and algorithms for analyzing images},
+  author={Solem, Jan Erik},
+  year={2012},
+  publisher={O'Reilly}
+}
+
+@article{lloyd1982least,
+  title={Least squares quantization in PCM},
+  author={Lloyd, Stuart},
+  journal={Information Theory, IEEE Transactions on},
+  volume={28},
+  number={2},
+  pages={129--137},
+  year={1982},
+  publisher={IEEE}
+}
