--- a/reference.bib
+++ b/reference.bib
@@ -199,3 +199,90 @@
   year={1982},
   publisher={IEEE}
 }
+
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{ojala2002multiresolution,
+  title={Multiresolution gray-scale and rotation invariant texture classification with local binary patterns},
+  author={Ojala, Timo and Pietikainen, Matti and Maenpaa, Topi},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={24},
+  number={7},
+  pages={971--987},
+  year={2002},
+  publisher={IEEE}
+}
+
+@inproceedings{boser1992training,
+  title={A training algorithm for optimal margin classifiers},
+  author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+  booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+  pages={144--152},
+  year={1992},
+  organization={ACM}
+}
+
+@article{jiang2012high,
+  title={High-level event recognition in unconstrained videos},
+  author={Jiang, Yu-Gang and Bhattacharya, Subhabrata and Chang, Shih-Fu and Shah, Mubarak},
+  journal={International Journal of Multimedia Information Retrieval},
+  pages={1--29},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{burges1998tutorial,
+  title={A tutorial on support vector machines for pattern recognition},
+  author={Burges, Christopher JC},
+  journal={Data mining and knowledge discovery},
+  volume={2},
+  number={2},
+  pages={121--167},
+  year={1998},
+  publisher={Springer}
+}
+
+@inproceedings{barla2003histogram,
+  title={Histogram intersection kernel for image classification},
+  author={Barla, Annalisa and Odone, Francesca and Verri, Alessandro},
+  booktitle={Image Processing, 2003. ICIP 2003. Proceedings. 2003 International Conference on},
+  volume={3},
+  pages={III--513},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{laptev2008learning,
+  title={Learning realistic human actions from movies},
+  author={Laptev, Ivan and Marszalek, Marcin and Schmid, Cordelia and Rozenfeld, Benjamin},
+  booktitle={Computer Vision and Pattern Recognition, 2008. CVPR 2008. IEEE Conference on},
+  pages={1--8},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{jiang2007towards,
+  title={Towards optimal bag-of-features for object categorization and semantic video retrieval},
+  author={Jiang, Yu-Gang and Ngo, Chong-Wah and Yang, Jun},
+  booktitle={Proceedings of the 6th ACM international conference on Image and video retrieval},
+  pages={494--501},
+  year={2007},
+  organization={ACM}
+}
+
+@incollection{agarwal2006hyperfeatures,
+  title={Hyperfeatures--multilevel local coding for visual recognition},
+  author={Agarwal, Ankur and Triggs, Bill},
+  booktitle={Computer Vision--ECCV 2006},
+  pages={30--43},
+  year={2006},
+  publisher={Springer}
+}
