finish video recognition

--- a/reference.bib
+++ b/reference.bib
@@ -286,3 +286,65 @@
   year={2006},
   publisher={Springer}
 }
+
+@article{salton1988term,
+  title={Term-weighting approaches in automatic text retrieval},
+  author={Salton, Gerard and Buckley, Christopher},
+  journal={Information processing \& management},
+  volume={24},
+  number={5},
+  pages={513--523},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@inproceedings{yang2007evaluating,
+  title={Evaluating bag-of-visual-words representations in scene classification},
+  author={Yang, Jun and Jiang, Yu-Gang and Hauptmann, Alexander G and Ngo, Chong-Wah},
+  booktitle={Proceedings of the international workshop on Workshop on multimedia information retrieval},
+  pages={197--206},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{zhou2008sift,
+  title={Sift-bag kernel for video event analysis},
+  author={Zhou, Xi and Zhuang, Xiaodan and Yan, Shuicheng and Chang, Shih-Fu and Hasegawa-Johnson, Mark and Huang, Thomas S},
+  booktitle={Proceedings of the 16th ACM international conference on Multimedia},
+  pages={229--238},
+  year={2008},
+  organization={ACM}
+}
+
+@article{reynolds2000speaker,
+  title={Speaker verification using adapted Gaussian mixture models},
+  author={Reynolds, Douglas A and Quatieri, Thomas F and Dunn, Robert B},
+  journal={Digital signal processing},
+  volume={10},
+  number={1},
+  pages={19--41},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@inproceedings{liu2013video,
+  title={Video event recognition using concept attributes.},
+  author={Liu, Jingen and Yu, Qian and Javed, Omar and Ali, Saad and Tamrakar, Amir and Divakaran, Ajay and Cheng, Hui and Sawhney, Harpreet S},
+  booktitle={WACV},
+  pages={339--346},
+  year={2013}
+}
+
+@inproceedings{natarajan2011bbn,
+  title={Bbn viser trecvid 2011 multimedia event detection system},
+  author={Natarajan, Pradeep and Natarajan, Prem and Manohar, Vasant and Wu, Shuang and Tsakalidis, Stavros and Vitaladevuni, Shiv N and Zhuang, Xiaodan and Prasad, Rohit and Ye, Guangnan and Liu, Dong and others},
+  booktitle={NIST TRECVID Workshop},
+  year={2011}
+}
+
+@inproceedings{natsev2010ibm,
+  title={IBM research TRECVID-2010 video copy detection and multimedia event detection system},
+  author={Natsev, Apostol and Smith, John R and Hill, Matthew and Hua, Gang and Huang, Bert and Merler, Michele and Xie, Lexing and Ouyang, Hua and Zhou, Mingyuan},
+  booktitle={Proceedings of NIST TRECVID, Workshop},
+  year={2010}
+}
