--- a/experiments.tex
+++ b/experiments.tex
@@ -53,8 +53,106 @@
       \hline
       \end{tabular}
     \end{center}
+
     \caption{Comparison of recognition accuracy between aligned distance and unaligned distance}
 \end{table}
 
 
 \subsection{Video recognition}
+
+\begin{table}[!ht]
+  \begin{center}
+  \scalebox{0.9}{
+    \begin{tabular} {cccccc}
+    \hline
+    \head{} & \head{Gaussian} & \head{Laplacian} & \head{ISD} & \head{ID} &\head{Fused kernels}\\
+    \hline
+    Level 0 & $44.38 \pm 2.13$ & $44.90 \pm 2.73$ & $44.01 \pm 2.13$ & $45.36 \pm 3.13$ & $44.33 \pm 2.61$ \\
+    Level 1 (Unaligned) &$43.08 \pm 3.14$ &$43.85\pm3.84$ &$43.22\pm3.11$ &$43.85\pm3.56$ &$43.56\pm3.46$ \\
+    Level 1 (Aligned)&$43.61\pm2.97$ &$43.40\pm3.18$ &$43.46\pm2.97$ &$43.22\pm3.11$ & $44.08\pm3.25$ \\
+      \hline
+      \end{tabular}
+      }
+    \end{center}
+    \caption{Means and standard deviations (percent) of MAPs over six events at different levels using SVM with different kernels.}
+\end{table}
+
+
+
+\begin{table}[!ht]
+  \begin{center}
+  \scalebox{0.9}{
+    \begin{tabular} {cccccc}
+    \hline
+    \head{} & \head{Gaussian} & \head{Laplacian} & \head{ISD} & \head{ID} &\head{Fused kernels}\\
+    \hline
+     bxx& $40.20 \pm 2.57$ & $38.35 \pm 2.31$ & $39.93 \pm 2.58$ & $38.23 \pm 2.08$ & $39.34 \pm 2.55$ \\
+     txx& $44.28 \pm 2.14$ & $44.90 \pm 2.73$ & $44.01 \pm 2.13 $ & $45.36 \pm 3.13 $ & $44.33 \pm 2.61$ \\
+     txc& $ 42.15 \pm 4.73$ & $45.01 \pm 3.45$ & $43.47 \pm 4.56$ & $45.38 \pm 3.20$ & $44.11 \pm 3.90$ \\
+     tfx& $ 43.76 \pm 2.99$ & $44.14 \pm 3.36$ & $43.61 \pm 3.03$ & $44.05 \pm 3.51$ & $44.18 \pm 3.22$ \\
+
+     tfc& $ 43.71\pm 1.37$ & $46.02 \pm 1.84$ & $44.93 \pm 1.64$ & $46.21 \pm 1.83$ & $45.28 \pm 1.62$ \\
+     straightforward soft& $43.54 \pm 2.12$ & $ 44.77\pm 2.41$ & $43.52 \pm 2.08$ & $45.24 \pm 2.47$ & $ 44.79\pm 2.55$ \\
+     Gaussian soft& $44.77 \pm 2.80$ & $45.23 \pm 2.76$ & $44.90 \pm 3.01$ & $45.23 \pm 2.87$ & $45.20 \pm 3.04$ \\
+      \hline
+      \end{tabular}
+      }
+    \end{center}
+    \caption{Means and standard deviations (percent) of MAPs over six events using different mechanisms to build histograms}
+\end{table}
+
+
+\begin{table}[!ht]
+  \begin{center}
+  \scalebox{0.9}{
+    \begin{tabular} {cccccc}
+    \hline
+    \head{} & \head{Gaussian} & \head{Laplacian} & \head{ISD} & \head{ID} &\head{Fused kernels}\\
+    \hline
+    spherical 128& $24.70 \pm 1.41 $ & $ 43.04 \pm 1.61 $ & $26.92 \pm 1.00$ & $43.64 \pm 0.96$ & $ 32.91 \pm 2.20$ \\
+    spherical 64& $ 23.99 \pm 1.40$ & $42.35 \pm 1.64$ & $ 25.62\pm 1.11$ & $43.42 \pm 1.18$ & $29.01 \pm 1.10$ \\
+    full 128& $ 25.69 \pm 7.57 $ & $21.39 \pm 7.32$ & $26.49 \pm 8.38$ & $21.93 \pm 7.75$ & $21.79 \pm 7.29$ \\
+    full 64& $  25.23 \pm 0.94$ & $ 29.69 \pm 1.81$ & $25.68 \pm 1.34$ & $30.74 \pm 1.67$ & $26.74 \pm 1.63$ \\
+    \hline
+    \end{tabular}
+    }
+    \end{center}
+    \caption{Means and standard deviations (percent) of MAPs over six events using different GMMs}
+\end{table}
+
+
+\begin{table}[!ht]
+  \begin{center}
+
+    \begin{tabular} {cc}
+    \hline
+    \head{} & \head{Recognition accuracy}\\
+    \hline
+    Kodak $\to$ Kodak & $38.5 \pm 12.7$\\
+    Youtube $\to$ Kodak & $30.0 \pm 6.9$\\
+    Baseline & $41.6 \pm 11.5$\\
+    \hline
+    \end{tabular}
+
+    \end{center}
+    \caption{Means and standard deviations (percent) of recognition accuracies using concept attributes}
+\end{table}
+
+
+\begin{table}[!ht]
+  \begin{center}
+
+    \begin{tabular} {cccc}
+    \hline
+    \head{Training videos} & \head{Testing videos} &\head{Original videos} &\head{Compressed videos}\\
+    \hline
+    60 & 846 &  $38.9 \pm 2.9$  & $38.6 \pm 2.8$ \\
+    120 & 786 & $45.7 \pm 2.2$  & $44.5 \pm 1.6$ \\
+    180 & 726 & $49.5 \pm 1.8$  & $48.3 \pm 1.9$ \\
+    240 & 666 & $52.0 \pm 2.1$  & $50.6 \pm 2.1$\\
+    \hline
+    \end{tabular}
+
+    \end{center}
+    \caption{Recognition accuracies (percent) using distances calculated on original videos and distances calculated on compressed videos.}
+\end{table}
