--- a/report.tex
+++ b/report.tex
@@ -17,6 +17,7 @@
 \usepackage{tabu}
 \usepackage{tabularx}
 \usepackage{pbox}
+\usepackage{xfrac}
 
 % citation style
 \usepackage{listings}
@@ -51,6 +52,7 @@
 % SVM
 
 \newcommand{\argmax}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{max}}\;}
+\newcommand{\argmin}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{min}}\;}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -76,7 +78,7 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
 
-\usepackage[font={it}]{caption}
+% \usepackage[font={it}]{caption}
 
 \begin{document}
 % \tableofcontents
@@ -84,9 +86,9 @@
 % \include{introduction}
 % \include{literature}
 % \include{imageRec}
-\include{videoRec}
+% \include{videoRec}
 % \include{domainAdaption}
-% \include{experiments}
+\include{experiments}
 % \include{webDemo}
 % \include{conclusion}
 
