--- a/reference.bib
+++ b/reference.bib
@@ -348,3 +348,51 @@
   booktitle={Proceedings of NIST TRECVID, Workshop},
   year={2010}
 }
+
+@inproceedings{daume2007frustratingly,
+  title={Frustratingly easy domain adaptation},
+  author={Daum{\'e} III, Hal},
+  booktitle={ACL},
+  volume={1785},
+  number={1786},
+  pages={1787},
+  year={2007}
+}
+
+@inproceedings{yang2007cross,
+  title={Cross-domain video concept detection using adaptive svms},
+  author={Yang, Jun and Yan, Rong and Hauptmann, Alexander G},
+  booktitle={Proceedings of the 15th international conference on Multimedia},
+  pages={188--197},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{duan2009domain,
+  title={Domain transfer svm for video concept detection},
+  author={Duan, Lixin and Tsang, Ivor W and Xu, Dong and Maybank, Stephen J},
+  booktitle={Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
+  pages={1375--1381},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{borgwardt2006integrating,
+  title={Integrating structured biological data by kernel maximum mean discrepancy},
+  author={Borgwardt, Karsten M and Gretton, Arthur and Rasch, Malte J and Kriegel, Hans-Peter and Sch{\"o}lkopf, Bernhard and Smola, Alex J},
+  journal={Bioinformatics},
+  volume={22},
+  number={14},
+  pages={e49--e57},
+  year={2006},
+  publisher={Oxford Univ Press}
+}
+@article{lanckriet2004learning,
+  title={Learning the kernel matrix with semidefinite programming},
+  author={Lanckriet, Gert RG and Cristianini, Nello and Bartlett, Peter and Ghaoui, Laurent El and Jordan, Michael I},
+  journal={The Journal of Machine Learning Research},
+  volume={5},
+  pages={27--72},
+  year={2004},
+  publisher={JMLR. org}
+}
